Modificación de fuentes y tamaños de texto

--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_especialista_salud.html
@@ -5,8 +5,14 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center><h2>Agregar <br><i class="bi bi-activity"> Especialista de Salud</i></h2> 
-            <i class="bi bi-heart-pulse">Ingrese sus datos</i>
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>
+                        Agregar <br>
+                        Especialista de Salud
+                    </b>
+                </h1> 
+            <i class="bi bi-person-plus">¡ Ingrese sus datos !</i>
             </center>
                 <div class="container mt-3 text-center">
                 </div>
