--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_funcionario.html
@@ -5,9 +5,13 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Agregar Funcionario</h2> </center>    
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Agregar Funcionario</b>
+                </h1>
+            </center>    
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese los datos del funcionario ! </small>
+                    <i class="bi bi-person-plus"> ¡ Ingrese los datos del funcionario ! </i>
                 </div>
             
             <div class="card-body">
