--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_paciente.html
@@ -5,7 +5,11 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Agregar Paciente</h2> </center>    
+            <center>  
+                <h1 style="font-family: Bodoni;">
+                    <b>Agregar Paciente</b>
+                </h1> 
+            </center>    
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
                         <i class="bi bi-person-plus"> ¡ Ingrese los datos del paciente ! </i>
