--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_especialista_salud.html
@@ -5,7 +5,14 @@
 		<div class="container">
 			<div class="card">
 				<div class="card-body">
-					<center>  <h2> <i class="bi-file-earmark-medical"></>Listado de Especialistas de salud</i></h2> </center>
+					<center>  
+						<h1 style="font-family: Lucida Calligraphy;"> 
+							<b class="bi-file-earmark-medical">
+								Listado de <br>
+								Especialistas de salud
+							</b >
+						</h1> 
+					</center>
 
 				<table  align="right" >
 					<tr>
