--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_funcionario.html
@@ -5,7 +5,11 @@
 	<div class="container">
 		<div class="card">
 			<div class="card-body">
-				<center>  <h2> <i class="bi-person-check-fill">Listado de Funcionarios</i></h2> </center>    
+				<center>  
+					<h1 style="font-family: Lucida Calligraphy;"> 
+						<b class="bi-person-check-fill">Listado de Funcionarios</b>
+					</h1> 
+				</center>
 
 					<table  align="right" >
 						<tr>
