--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/listar_proveedor.html
@@ -5,7 +5,11 @@
 	<div class="container">
 			<div class="card">
 				<div class="card-body">
-					<center>  <h2> <i class="bi-truck">Listado de Proveedores</i></h2> </center>
+					<center>
+						<h1 style="font-family: Lucida Calligraphy;">
+							 <b class="bi-truck">Listado de Proveedores</b>
+						</h1> 
+						</center>
 
 					<table  align="right" >
 						<tr>
