--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_especialista_salud.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_especialista_salud.html
@@ -5,10 +5,13 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Modificar datos de Especialista de Salud</h2> </center>    
-                  <!-- Tooltip. -->
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Especialista de Salud</b>
+                </h1>
+            </center>
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese los datos del especialista de salud ! </small>
+                    <i class="bi bi-person-check"> ¡ Modifique los datos del especialista de salud ! </i>
                 </div>
             
             <div class="card-body">
@@ -31,55 +34,53 @@
                     <div style="margin: 20px;">
                         <table>
                             <div class="form-group">
-                                <label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label>
+                                <label for="{{form2.nombre.name}}"><b>{{form2.nombre.label}}</b></label>
                                 {{form2.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label>
+                                <label for="{{form2.apellido.name}}"><b>{{form2.apellido.label}}</b></label>
                                 {{form2.apellido}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.numero_documento.name}}">{{form2.numero_documento.label}}</label>
+                                <label for="{{form2.numero_documento.name}}"><b>{{form2.numero_documento.label}}</b></label>
                                 {{form2.numero_documento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.direccion.name}}">{{form2.direccion.label}}</label>
+                                <label for="{{form2.direccion.name}}"><b>{{form2.direccion.label}}</b></label>
                                 {{form2.direccion}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.telefono.name}}">{{form2.telefono.label}}</label>
+                                <label for="{{form2.telefono.name}}"><b>{{form2.telefono.label}}</b></label>
                                 {{form2.telefono}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.correo_electronico.name}}">{{form2.correo_electronico.label}}</label>
+                                <label for="{{form2.correo_electronico.name}}"><b>{{form2.correo_electronico.label}}</b></label>
                                 {{form2.correo_electronico}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.fecha_nacimiento.name}}">{{form2.fecha_nacimiento.label}}</label>
+                                <label for="{{form2.fecha_nacimiento.name}}"><b>{{form2.fecha_nacimiento.label}}</b></label>
                                 {{form2.fecha_nacimiento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.sexo.name}}">{{form2.sexo.label}}</label>
+                                <label for="{{form2.sexo.name}}"><b>{{form2.sexo.label}}</b></label>
                                 {{form2.sexo}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.trabajos_realizados.name}}">{{form.trabajos_realizados.label}}</label>
+                                <label for="{{form.trabajos_realizados.name}}"><b>{{form.trabajos_realizados.label}}</b></label>
                                 {{form.trabajos_realizados}}
                             </div>
                             <div class="form-group">
-                                <label for="{{form.especialidades.name}}">{{form.especialidades.label}}</label>
+                                <label for="{{form.especialidades.name}}"><b>{{form.especialidades.label}}</b></label>
                                 {{form.especialidades}}
                             </div> 
-                            <!-- {{form2.as_p}} -->
-                            <!-- {{form.as_p}} -->
                         </table>
                     </div>
 
