--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_funcionario.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_funcionario.html
@@ -5,10 +5,14 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Modificar Funcionario</h2> </center>    
+            <center>  
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Funcionario</b>
+                </h1> 
+            </center>    
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese los datos del funcionario ! </small>
+                    <i class="bi bi-person-check">¡ Modifique los datos del funcionario ! </i>
                 </div>
             
             <div class="card-body">
@@ -17,51 +21,49 @@
                     <div style="margin: 20px;">
                         <table>
                             <div class="form-group">
-                                <label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label>
+                                <label for="{{form2.nombre.name}}"><b>{{form2.nombre.label}}</b></label>
                                 {{form2.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label>
+                                <label for="{{form2.apellido.name}}"><b>{{form2.apellido.label}} </b></label>
                                 {{form2.apellido}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.numero_documento.name}}">{{form2.numero_documento.label}}</label>
+                                <label for="{{form2.numero_documento.name}}"><b>{{form2.numero_documento.label}}</b></label>
                                 {{form2.numero_documento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.direccion.name}}">{{form2.direccion.label}}</label>
+                                <label for="{{form2.direccion.name}}"><b>{{form2.direccion.label}}</b></label>
                                 {{form2.direccion}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.telefono.name}}">{{form2.telefono.label}}</label>
+                                <label for="{{form2.telefono.name}}"><b>{{form2.telefono.label}}</b></label>
                                 {{form2.telefono}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.correo_electronico.name}}">{{form2.correo_electronico.label}}</label>
+                                <label for="{{form2.correo_electronico.name}}"><b>{{form2.correo_electronico.label}}</b></label>
                                 {{form2.correo_electronico}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.fecha_nacimiento.name}}">{{form2.fecha_nacimiento.label}}</label>
+                                <label for="{{form2.fecha_nacimiento.name}}"><b>{{form2.fecha_nacimiento.label}}</b></label>
                                 {{form2.fecha_nacimiento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.sexo.name}}">{{form2.sexo.label}}</label>
+                                <label for="{{form2.sexo.name}}"><b>{{form2.sexo.label}}</b></label>
                                 {{form2.sexo}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.cargos.name}}">{{form.cargos.label}}</label>
+                                <label for="{{form.cargos.name}}"><b>{{form.cargos.label}}</b></label>
                                 {{form.cargos}}
                             </div> 
-                            <!-- {{form2.as_p}} -->
-                            <!-- {{form.as_p}} -->
                         </table>
                     </div>
 
