--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_proveedor.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_proveedor.html
@@ -6,10 +6,14 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Modificar Proveedor</h2> </center>
+            <center>
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Proveedor</b>
+                </h1>
+            </center>
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                    <small> <b>   ¡ Ingrese los datos del Proveedor ! </small>
+                    <i class="bi bi-person-check"> ¡ Modifique los datos del Proveedor ! </i>
                 </div>
             
             <div class="card-body">
@@ -32,27 +36,27 @@
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
-                                <label for="{{form.ruc.name}}">{{form.ruc.label}}</label>
+                                <label for="{{form.ruc.name}}"><b>{{form.ruc.label}}</b></label>
                                 {{form.ruc}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.nombre.name}}">{{form.nombre.label}}</label>
+                                <label for="{{form.nombre.name}}"><b>{{form.nombre.label}}</b></label>
                                 {{form.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.direccion.name}}">{{form.direccion.label}}</label>
+                                <label for="{{form.direccion.name}}"><b>{{form.direccion.label}}</b></label>
                                 {{form.direccion}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.telefono.name}}">{{form.telefono.label}}</label>
+                                <label for="{{form.telefono.name}}"><b>{{form.telefono.label}}</b></label>
                                 {{form.telefono}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.correo_electronico.name}}">{{form.correo_electronico.label}}</label>
+                                <label for="{{form.correo_electronico.name}}"><b>{{form.correo_electronico.label}}</b></label>
                                 {{form.correo_electronico}}
                             </div>
                            
