--- a/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
+++ b/Proyecto2/SmileSoft/panel_control/templates/panel_control/base.html
@@ -80,8 +80,8 @@
 
             <center> 
                 <a class="nav-link" class="c-1 d-flex align-items-center" aria-current="page" href=" /panel_control/inicio/"  data-toggle="tooltip" title="Página principal">
-                                  <FONT COLOR="black" style="font-size: 1.8rem" >ＳｍｉｌｅＳｏｆｔ</FONT> 
-                                  <img src="{% static 'img/favicon.png' %}" width="90px" alt="logo">
+                                  <FONT COLOR="black" style="font-size: 3.5rem; font-family:Monotype corsiva;" >S m i l e S o f t</FONT> 
+                                  <img src="{% static 'img/favicon.png' %}" width="95px" alt="logo">
                                 </a>
             </center> 
             
