--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/agregar_persona.html
@@ -6,9 +6,13 @@
             <div class="col-12 col-md-6 offset-md-3">
                     <div class="card">
                         <br>
-                        <center>  <h2>Agregar Persona</h2> </center>
+                        <center>
+                            <h1 style="font-family: Bodoni;">
+                                <b>Agregar Persona</b>
+                            </h1> 
+                        </center>
                             <div class="container mt-3 text-center">
-                                <small> <b>   ¡ Ingrese los datos de la persona ! </small>
+                                <i class="bi bi-person-plus"> ¡ Ingrese los datos de la persona ! </i>
                             </div>
                         <div class="card-body">
                             <form method="POST">
