--- a/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_paciente.html
+++ b/Proyecto2/SmileSoft/gestion_administrativo/templates/modificar_paciente.html
@@ -5,10 +5,14 @@
 <div class="col-12 col-md-6 offset-md-3">
         <div class="card">
             <br>
-            <center>  <h2>Modificar Paciente</h2> </center>    
+            <center>  
+                <h1 style="font-family: Bodoni;">
+                    <b>Modificar Paciente</b>
+                </h1>
+            </center>    
                   <!-- Tooltip. -->
                 <div class="container mt-3 text-center">
-                        <i class="bi bi-person-plus"> ¡ Ingrese los datos del paciente ! </i>
+                        <i class="bi bi-person-check"> ¡ Modifique los datos del paciente ! </i>
                 </div>
             
             <div class="card-body">
@@ -18,89 +22,89 @@
                     <div style="margin: 20px;" >
                         <table>
                             <div class="form-group">
-                                <label for="{{form2.nombre.name}}">{{form2.nombre.label}}</label>
+                                <label for="{{form2.nombre.name}}"><b>{{form2.nombre.label}}</b></label>
                                 {{form2.nombre}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.apellido.name}}">{{form2.apellido.label}}</label>
+                                <label for="{{form2.apellido.name}}"><b>{{form2.apellido.label}}</b></label>
                                 {{form2.apellido}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.numero_documento.name}}">{{form2.numero_documento.label}}</label>
+                                <label for="{{form2.numero_documento.name}}"><b>{{form2.numero_documento.label}}</b></label>
                                 {{form2.numero_documento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.direccion.name}}">{{form2.direccion.label}}</label>
+                                <label for="{{form2.direccion.name}}"><b>{{form2.direccion.label}}</b></label>
                                 {{form2.direccion}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.telefono.name}}">{{form2.telefono.label}}</label>
+                                <label for="{{form2.telefono.name}}"><b>{{form2.telefono.label}}</b></label>
                                 {{form2.telefono}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.correo_electronico.name}}">{{form2.correo_electronico.label}}</label>
+                                <label for="{{form2.correo_electronico.name}}"><b>{{form2.correo_electronico.label}}</b></label>
                                 {{form2.correo_electronico}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.fecha_nacimiento.name}}">{{form2.fecha_nacimiento.label}}</label>
+                                <label for="{{form2.fecha_nacimiento.name}}"><b>{{form2.fecha_nacimiento.label}}</b></label>
                                 {{form2.fecha_nacimiento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form2.sexo.name}}">{{form2.sexo.label}}</label>
+                                <label for="{{form2.sexo.name}}"><b>{{form2.sexo.label}}</b></label>
                                 {{form2.sexo}}
                             </div>
                             <br>
                             <hr>
-                            <center><h4 style="font:italic;">Ingrese su antecedente clinico</h4></center>
+                            <center><h3 style="font-family: Bodoni;">Ingrese su antecedente clínico</h3></center>
                             <div class="form-group">
-                                <label for="{{form.grupo_sanguineo.name}}">{{form.grupo_sanguineo.label}}</label>
+                                <label for="{{form.grupo_sanguineo.name}}"><b>{{form.grupo_sanguineo.label}}</b></label>
                                 {{form.grupo_sanguineo}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.enfermedad_base.name}}">{{form.enfermedad_base.label}}</label>
+                                <label for="{{form.enfermedad_base.name}}"><b>{{form.enfermedad_base.label}}</b></label>
                                 {{form.enfermedad_base}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.alergia.name}}">{{form.alergia.label}}</label>
+                                <label for="{{form.alergia.name}}"><b>{{form.alergia.label}}</b></label>
                                 {{form.alergia}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.intolerancia_anestecia.name}}">{{form.intolerancia_anestecia.label}}</label>
+                                <label for="{{form.intolerancia_anestecia.name}}"><b>{{form.intolerancia_anestecia.label}}</b></label>
                                 {{form.intolerancia_anestecia}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.frecuencia_higiene_bucal.name}}">{{form.frecuencia_higiene_bucal.label}}</label>
+                                <label for="{{form.frecuencia_higiene_bucal.name}}"><b>{{form.frecuencia_higiene_bucal.label}}</b></label>
                                 {{form.frecuencia_higiene_bucal}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.medicamento.name}}">{{form.medicamento.label}}</label>
+                                <label for="{{form.medicamento.name}}"><b>{{form.medicamento.label}}</b></label>
                                 {{form.medicamento}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.cirugias.name}}">{{form.cirugias.label}}</label>
+                                <label for="{{form.cirugias.name}}"><b>{{form.cirugias.label}}</b></label>
                                 {{form.cirugias}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.caries.name}}">{{form.caries.label}}</label>
+                                <label for="{{form.caries.name}}"><b>{{form.caries.label}}</b></label>
                                 {{form.caries}}
                             </div>
                             <br>
                             <div class="form-group">
-                                <label for="{{form.afeccion_cronica_familiar.name}}">{{form.afeccion_cronica_familiar.label}}</label>
+                                <label for="{{form.afeccion_cronica_familiar.name}}"><b>{{form.afeccion_cronica_familiar.label}}</b></label>
                                 {{form.afeccion_cronica_familiar}}
                             </div>
                             <br>
