Add Empresa, y Permisos de los roles

--- a/Proyecto2/SmileSoft/gestion_cobros/templates/detalle_cobro_pdf.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/detalle_cobro_pdf.html
@@ -94,7 +94,7 @@
                                 <br>
                                 {%for i in t.insumos%}
                                     
-                                      <li>&nbsp;&nbsp;&nbsp; {{i.nombre_insumo}}</li>
+                                      <li>&nbsp;&nbsp;&nbsp; {{i.nombre_insumo}} <br> </li>
                         
                                 {%endfor%}
                                 
