--- a/Proyecto2/SmileSoft/gestion_cobros/templates/presupuesto_pdf.html
+++ b/Proyecto2/SmileSoft/gestion_cobros/templates/presupuesto_pdf.html
@@ -94,13 +94,13 @@
                                 <br>
                                 {%for i in t.insumos%}
                                     
-                                      <li>&nbsp;&nbsp;&nbsp; {{i.nombre_insumo}} <br></li>
+                                      <li>&nbsp;&nbsp;&nbsp; {{i.nombre_insumo}} </li>
                                      
                         
                                 {%endfor%}
                                 
                                 </td>
-                                <br>
+                             
                                 <td>&emsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;{{t.tratamiento_asig.precio}} Gs</td>
                             </tr>
                             {% endfor %}
