--- a/Proyecto2/SmileSoft/gestion_agendamiento/templates/visualizar_datos_cita.html
+++ b/Proyecto2/SmileSoft/gestion_agendamiento/templates/visualizar_datos_cita.html
@@ -58,12 +58,12 @@
                         <br>
                       
                         {%if perms.gestion_agendamiento.view_cita%}
-                            <div class="form-group">
+                            <div class="form-group" >
                                 <label for="{{form.estado.name}}"><b>{{form.estado.label}}</b></label>
                                     {{form.estado}}
                             </div> 
                         {%endif%}
-
+                     
                        
                     </div>
                    
@@ -71,7 +71,7 @@
                     <div class="d-flex justify-content-center">
                         <a onclick="history.back()" class="btn btn-danger" style="margin: 10px;">
                             <i class="bi bi-arrow-left-square"></i>
-                            Atras
+                            Atrás
                         </a>
                     </div>
                     <hr>
