--- a/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
+++ b/Proyecto2/SmileSoft/gestion_tratamiento/templates/tratamiento/listar_tratamientos_pendientes.html
@@ -89,7 +89,7 @@
                                             <td >{{t.hora}}</td>
                                             <td >{{t.profesional}}</td>
                                             <!-- Eliminar-->
-                                            <!-- {%if perms.gestion_tratamiento.delete_tratamiento%} -->
+                                            {%if perms.gestion_agendamiento.add_cita%}
                                                 <td>
                                                     <!-- <a href="/tratamiento/realizar_pregunta/{t.id}" class="btn btn-success"> -->
                                                     {%if t.fecha_pasada%}
@@ -103,7 +103,7 @@
                                                         </a>
                                                     {%endif%}
                                                 </td>
-                                            <!-- {%endif%} -->
+                                           {%endif%} 
                                         </tr>
                                     {% endfor %}
                                 {%else%}
